fix up word wrap when you have huge values

--- a/src/unminified/style.css
+++ b/src/unminified/style.css
@@ -168,7 +168,8 @@ label {
 
 .aligned {
     vertical-align: middle;
-    width: 234px;
+    min-width: 214px;
+    margin-right: 20px;
 }
 
 hr {
